--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Verify build output
+        run: ls -la ./dist
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
